--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+
+
 <html>
   <head>
     <meta charset="UTF-8">
@@ -9,23 +11,30 @@
          If you include the next line in all your web pages, they will all share the same look.
          This makes it easier to make new pages for your site. -->
 
-    <link href="style.css" rel="stylesheet" type="text/css" media="all">
+    <link href="css/style.css" rel="stylesheet" type="text/css" media="all">
   </head>
   <body>
-    <h1>home.</h1>
 
-    <p>This is a paragraph! Here's how you make a link: <a href="https://neocities.org">Neocities</a>.</p>
+    <div class="background bg1"></div>
+    <div class="background bg2"></div>
+    
+    <div class="content">
+      <h1 align="center">home.</h1>
 
-    <p>Here's how you can make <strong>bold</strong> and <em>italic</em> text.</p>
+      <p>This is a paragraph! Here's how you make a link: <a href="https://neocities.org">Neocities</a>.</p>
 
-    <p>Here's how you can add an image:</p>
-    <img src="peace.gif">
+      <p>Here's how you can make <strong>bold</strong> and <em>italic</em> text.</p>
+
+      <p>Here's how you can add an image:</p>
 
 
-    <p> here are my links</p>
-    <ul>
-      <li> <a href="https://paracosms.itch.io/"> Itch </a> </li>
-    </ul>
+      <p> here are my links</p>
+      <ul>
+        <li> <a href="https://paracosms.itch.io/"> Itch </a> </li>
+      </ul>
+    </div> 
 
+  
+    <script src="js/parallax.js"></script>
   </body>
 </html>
