lightbulb back button

--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -16,13 +16,24 @@
   </head>
   <body>
 
+
+    <div id="viewport-container">
+      <div id="bottom-right-message">
+        <p> alternatively, 
+          <span id="onePxOutline">
+            <a href="woocosms.html"> woocosms.</a>
+          </span>
+        </p>
+      </div>
+    </div>
+
     <!-- parallax background -->
     <div class="background bg1"></div>
     <div class="background bg2"></div>
     
 
     <div class="content">
-      <h1 align="center">home.</h1>
+      <h1 id="specialHeader" align="center">home.</h1>
 
   
 
@@ -40,18 +51,11 @@
 
 
 
-      <div id="viewport-container">
-        <div id="bottom-right-message">
-          <p> alternately <a href="woocosms.html">woocosms.</a></p>
-        </div>
-      </div>
-    </div> 
     
   </body>
 
   <!-- load scripts -->
   <script src="../js/main.js"></script>
-
   <script> window.scrollTo(0,0)</script>
   
 </html>
