--- a/public/pages/woocosms.html
+++ b/public/pages/woocosms.html
@@ -10,18 +10,39 @@
   </head>
   <body>
 
+      <!-- lightbulb back button -->
+    <p id="backText"> back ?</p>
+    <div class="backButtonContainer">
+      <img id="backButton" src="../images/lightbulbExtended.png">
+    </div>
+
     <!-- parallax background -->
     <div class="background bg1"></div>
     <div class="background bg2"></div>
 
-    <button class="back-button" onclick="previousPage()">Go Back</button>
-
     <div class="content">
+
       <h1 align="center">woocosms</h1>
 
-     <p align="center">name explanation</p>
+      <div class="contentBox">
+        <p> 
+          Skipping past the other names of AMPMCraft1523, Lord Pikablu, and Pikablu127, I think I've found a home with the name woocosms.
+          I often tend to iterate between keeping or adding the "s" at the end, and whether or not I want to stick to Paracosms or not.
+        </p>
+        <p>
+          The name originally comes from the Geometry Dash demonlist level Hyper Paracosm, which for a while, used to be my Minecraft username.
+          One day my friend suggested the switch to just Paracosm, to have a more recognizable name. Unfortunately, since it was taken, I stuck with HyperParacosm.
+          Since Paracosm was taken, my friend suggested to just switch to Paracosms instead. 
+          This is my go-to name for most online areas, and where the "cosms" comes from in woocosms.
+        </p>
+        <p>
+          Unfortunately still, Paracosms is not unique enough to be able to be available on every website. This led me to iterate on my username again.
+          As for where this comes from, sometimes when my friends texted my name they'd write "andrewew", similarly sounding to andrewoo.
+          The "woo" in woocosms comes from my Discord nickanme in a server of my friends, where my nickname there is simply "woo".
+        </p>
+      </div>
 
-  
+    </div>
 
   </body>
 
