--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
          If you include the next line in all your web pages, they will all share the same look.
          This makes it easier to make new pages for your site. -->
 
-    <link href="../css/style.css" rel="stylesheet" type="text/css" media="all">
+    <link href="/css/style.css" rel="stylesheet" type="text/css" media="all">
     
   </head>
   <body>
@@ -21,7 +21,7 @@
       <div id="bottom-right-message">
         <p> alternatively, 
           <span id="onePxOutline">
-            <a href="woocosms.html"> woocosms.</a>
+            <a href="pages/woocosms.html"> woocosms.</a>
           </span>
         </p>
       </div>
@@ -55,7 +55,7 @@
   </body>
 
   <!-- load scripts -->
-  <script src="../js/main.js"></script>
+  <script src="/js/main.js"></script>
   <script> window.scrollTo(0,0)</script>
   
 </html>
