button hover fix

--- a/public/pages/woocosms.html
+++ b/public/pages/woocosms.html
@@ -10,12 +10,6 @@
   </head>
   <body>
 
-      <!-- lightbulb back button -->
-    <p id="backText"> back ?</p>
-    <div class="backButtonContainer">
-      <img id="backButton" src="../images/lightbulbExtended.png">
-    </div>
-
     <!-- parallax background -->
     <div class="background bg1"></div>
     <div class="background bg2"></div>
@@ -38,11 +32,19 @@
         <p>
           Unfortunately still, Paracosms is not unique enough to be able to be available on every website. This led me to iterate on my username again.
           As for where this comes from, sometimes when my friends texted my name they'd write "andrewew", similarly sounding to andrewoo.
-          The "woo" in woocosms comes from my Discord nickanme in a server of my friends, where my nickname there is simply "woo".
+          The "woo" in woocosms comes from my Discord nickname in a server of my friends, where my nickname there is simply "woo".
         </p>
       </div>
 
     </div>
+
+
+    <!-- lightbulb back button -->
+    <p id="backText"> back ?</p>
+    <div class="backButtonContainer">
+      <img id="backButton" src="../images/lightbulbExtended.png">
+    </div>
+
 
   </body>
 
