added new links and made them clickable

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,6 @@
   </head>
   <body>
 
-
     <div id="viewport-container">
       <div id="bottom-right-message">
         <p> alternatively, 
@@ -27,31 +26,28 @@
       </div>
     </div>
 
-    <!-- parallax background -->
-    <div class="background bg1"></div>
-    <div class="background bg2"></div>
-    
-
     <div class="content">
       <h1 id="specialHeader" align="center">home.</h1>
 
-  
-
-      <p>This is a paragraph! Here's how you make a link: <a href="https://neocities.org">Neocities</a>.</p>
 
 
-      <p>Here's how you can make <strong>bold</strong> and <em>italic</em> text.</p>
+      <p>welcome to my little corner ! there's not much to see here, yet.</p>
 
 
-
-      <p> here are my links</p>
+      <p> here are some of my other web adventures:</p>
       <ul>
-        <li> <a href="https://paracosms.itch.io/"> Itch </a> </li>
+        <li> <a href="https://paracosms.itch.io/"> itch </a> </li>
+        <li> <a href="https://github.com/Paracosms"> github</a> </li>
+        <li> <a href="https://youtube.com/@pikablu1272"> youtube</a> </li>
       </ul>
     </div>
 
 
-    
+
+    <!-- parallax background -->
+    <div class="background bg1"></div>
+    <div class="background bg2"></div>
+
   </body>
 
   <!-- load scripts -->
