backbutton update and css fix

--- a/public/pages/woocosms.html
+++ b/public/pages/woocosms.html
@@ -16,7 +16,7 @@
 
     <div class="content">
 
-      <h1 align="center">woocosms</h1>
+      <h1>woocosms</h1>
 
       <div class="contentBox">
         <p> 
@@ -38,9 +38,8 @@
 
     </div>
 
-
     <!-- lightbulb back button -->
-    <p id="backText"> back ?</p>
+    <p id="backText" class="fade-in"> back ?</p>
     <div class="backButtonContainer">
       <img id="backButton" src="../images/lightbulbExtended.png">
     </div>
