--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
   </div>
 
   <div class="content">
-      <h1 id="specialHeader" align="center">home.</h1>
+      <h1 id="specialHeader">home.</h1>
 
 
 
